fixed desktop css and worked on mobile response fix #7

--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -5,8 +5,8 @@ html {
 .quoteBox {
   background-color: #fff;
   text-align: center;
-  margin-right: 5%;
-  margin-left: 5%;
+  margin-right: 15%;
+  margin-left: 15%;
   padding-top: 2%;
   padding-bottom: 2%;
   border-radius: .5em;
@@ -19,11 +19,10 @@ html {
 
 h1 {
   border-bottom: solid #A4EDB1 1px;
-  margin-right: 10%;
-  margin-left: 10%;
+  margin-right: 20%;
+  margin-left: 20%;
   padding-bottom: 3%;
   font-family: Helvetica, sans-serif;
-  font-size: 4.5em;
 }
 
 button {
@@ -50,7 +49,7 @@ button {
   padding-top: 5%;
   padding-right: 5%;
   padding-left: 5%;
-  font-size: 3em; 
+  font-size: 1.5em; 
 }
 
 #extra {
@@ -71,18 +70,27 @@ button {
 /*MOBILE
 -------------------------*/
 
-/*@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   h1 {
     font-size: 1.5em;
   }
 
-  #randomQuote{
-  font-size: 1.3em; 
-}
-
-.quoteBox {
+  h1 {
+  border-bottom: solid #A4EDB1 1px;
   margin-right: 10%;
   margin-left: 10%;
-}*/
+  padding-bottom: 3%;
+  font-family: Helvetica, sans-serif;
+  font-size: 4.5em;
+}
+
+#randomQuote{
+  text-align: center;
+  font-size: 2.3em;
+  padding-top: 5%;
+  padding-right: 5%;
+  padding-left: 5%;
+  font-size: 3em; 
+}
 
 }
